fixing align items in team boxes

--- a/app/assets/stylesheets/components/_admin-btn.scss
+++ b/app/assets/stylesheets/components/_admin-btn.scss
@@ -31,7 +31,6 @@
   color: white;
   transition: all 0.3s ease-out;
   width: fit-content;
-  margin-left: 48px;
   p {
     margin: 0px;
     padding: 0px;
