--- a/app/assets/stylesheets/components/_resum-project-box.scss
+++ b/app/assets/stylesheets/components/_resum-project-box.scss
@@ -70,6 +70,9 @@
 
 .resum-member {
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .skills-btn {
